<resources>
    <string name="app_name">InventoryApp</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="product_name_label">Product Name</string>
    <string name="hint_product_name">Book Title</string>
    <string name="product_price_label">Price</string>
    <string name="hint_product_price">$0.00</string>
    <string name="product_quantity_label">Quantity</string>
    <string name="minus">-</string>
    <string name="initial_product_quantity">0</string>
    <string name="plus">+</string>
    <string name="product_supplier_name_label">Supplier Name</string>
    <string name="hint_product_supplier_name">Name of Supplier</string>
    <string name="product_supplier_phone_label">Supplier Phone Number</string>
    <string name="hint_product_supplier_phone">xxx-xxx-xxxx</string>
    <string name="order">Order</string>
    <string name="editor_insert_product_successful">Book saved</string>
    <string name="editor_insert_product_failed">Error with saving book</string>
    <string name="editor_update_product_successful">Book updated</string>
    <string name="editor_update_product_failed">Error updating book</string>
    <string name="editor_activity_title_add_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book Information</string>
    <string name="unsaved_changes_dialog_message">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_failed">Error deleting product</string>
    <string name="editor_delete_product_successful">Book deleted</string>
    <string name="delete_dialog_message">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_entries">Delete All Books</string>
    <string name="empty_view_title">No Current Inventory</string>
    <string name="empty_view_subtitle">Please add a book by using the + button</string>
    <string name="sale_button_text">Sale</string>
    <string name="main_activity_product_price_label">Price: $</string>
    <string name="main_activity_product_quantity_label">Available: </string>
    <string name="quantity_change_inventory_empty">Book is no longer available. Please order more.</string>
</resources>
